Issue #SB-25353 fix: year of birth button alignment issue fixed

--- a/src/app.scss
+++ b/src/app.scss
@@ -1898,7 +1898,7 @@ sb-library-card-v3 {
 .year-of-birth-popup{
   .popover-content {
     width: 80vw !important;
-    height: 26vh !important;
+    height: 35vh !important;
     left: 5% !important;
     border-radius: 16px;
     position: initial
